# mqweb

./: .gitignore  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  ChangeLog.txt  README.md  _config.yml  contact.html  contact.md  features.html  features.md  index.html  license.txt  mq.lua  mqweb.kdev4  news.html  params.json  poco.lua  premake4.lua  security.html  security.md
.kdev4/: _custom.kdev4  mqweb.kdev4
MQ/: CMakeLists.txt  premake4.lua
MQ/include/MQ/: Buffer.h  CommandServer.h  MQException.h  MQFunctions.h  MQSubsystem.h  Message.h  MessageConsumer.h  MessageHandle.h  PCF.h  PCFParameters.h  Queue.h  QueueManager.h  QueueManagerPool.h  Topic.h
MQ/src/: Buffer.cpp  CommandServer.cpp  MQException.cpp  MQFunctions.cpp  MQSubsystem.cpp  Message.cpp  MessageConsumer.cpp  MessageHandle.cpp  PCF.cpp  PCFParameters.cpp  Queue.cpp  QueueManager.cpp  QueueManagerPool.cpp  Topic.cpp
MQCheck/: CMakeLists.txt  premake4.lua
MQCheck/include/MQ/Check/: Application.h
MQCheck/src/: Application.cpp
MQDictionary/: CMakeLists.txt  premake4.lua
MQDictionary/src/: Application.cpp
MQWeb/: CMakeLists.txt  premake4.lua
MQWeb/include/MQ/Web/: AppRequestHandler.h  Application.h  AuthenticationInformationChange.h  AuthenticationInformationController.h  AuthenticationInformationCopy.h  AuthenticationInformationCreate.h  AuthenticationInformationInquire.h  AuthenticationInformationMapper.h  AuthenticationInformationRemove.h  AuthorityRecordController.h  AuthorityRecordInquire.h  AuthorityRecordMapper.h  AuthorityRecordRemove.h  AuthorityRecordSet.h  AuthorityServiceController.h  AuthorityServiceInquire.h  AuthorityServiceMapper.h  ChannelAuthenticationRecordController.h  ChannelAuthenticationRecordInquire.h  ChannelAuthenticationRecordSet.h  ChannelController.h  ChannelCopy.h  ChannelCreate.h  ChannelInitiatorController.h  ChannelInitiatorInquire.h  ChannelInitiatorMapper.h  ChannelInquire.h  ChannelListController.h  ChannelMQMapper.h  ChannelMapper.h  ChannelPing.h  ChannelRemove.h  ChannelStart.h  ChannelStatusController.h  ChannelStatusInquire.h  ChannelStatusMQMapper.h  ChannelStatusMapper.h  ChannelStop.h  ClusterQueueManagerController.h  ClusterQueueManagerInquire.h  (+88 more)
MQWeb/src/: AppRequestHandler.cpp  Application.cpp  AuthenticationInformationChange.cpp  AuthenticationInformationController.cpp  AuthenticationInformationCopy.cpp  AuthenticationInformationCreate.cpp  AuthenticationInformationInquire.cpp  AuthenticationInformationMapper.cpp  AuthenticationInformationRemove.cpp  AuthorityRecordController.cpp  AuthorityRecordInquire.cpp  AuthorityRecordMapper.cpp  AuthorityRecordRemove.cpp  AuthorityRecordSet.cpp  AuthorityServiceController.cpp  AuthorityServiceInquire.cpp  AuthorityServiceMapper.cpp  ChannelAuthenticationRecordController.cpp  ChannelAuthenticationRecordInquire.cpp  ChannelAuthenticationRecordSet.cpp  ChannelController.cpp  ChannelCopy.cpp  ChannelCreate.cpp  ChannelInitiatorController.cpp  ChannelInitiatorInquire.cpp  ChannelInitiatorMapper.cpp  ChannelInquire.cpp  ChannelListController.cpp  ChannelMQController.cpp  ChannelMQMapper.cpp  ChannelMapper.cpp  ChannelPing.cpp  ChannelRemove.cpp  ChannelStart.cpp  ChannelStatusController.cpp  ChannelStatusInquire.cpp  ChannelStatusMQMapper.cpp  ChannelStatusMapper.cpp  ChannelStop.cpp  ClusterQueueManagerController.cpp  (+86 more)
_includes/: accordion_sample.html  filterop.md  footer.html  header.html  sidebar.html  top.html
_includes/samples/: index.md
_layouts/: default.html
_posts/: 2013-12-18-First-post.md  2013-12-18-MQWeb-launched.md  2014-03-02-MQWeb-0.0.9.md  2014-07-06-MQWeb-0.0.10.md  2014-08-14-MQWeb-use-case.md  2014-11-04-MQWeb-0.0.11.md  2015-09-24-MQWeb-0.0.12.md  2015-12-21-MQWeb-0.0.13.md  2016-01-12-MQWebApp.md  2017-09-22-MQWeb-0.1.00.md  2018-12-19-MQWeb-0.1.01.md  2019-03-19-MQWeb-0.1.02.md
api/: authinfo.md  authrec.md  authservice.md  channel.md  chinit.md  chlauth.md  chstatus.md  clusqmgr.md  conn.md  index.md  listener.md  lsstatus.md  message.md  qmgr.md  qmstatus.md  queue.md  sbstatus.md  sub.md  topic.md  tpstatus.md
api/samples/: authrec_inq.php.html  clusqmgr_inq.php.html  conn_inq.php.html  index.md  queue.html  queue_inq.php.html  queue_inq.pl.html
cocor/JSON/: JSON.atg  Parser.frame
cocor/compiler/: Action.cpp  CharClass.cpp  CharClass.h  CharSet.cpp  Coco.atg  Coco.cpp  Comment.cpp  Comment.h  DFA.cpp  DFA.h  Generator.cpp  Generator.h  Parser.cpp  Parser.h  ParserGen.cpp  ParserGen.h  Scanner.cpp  Scanner.frame  Scanner.h  Symbol.cpp  Symbol.h  Tab.cpp  Tab.h  build.bat  premake4.lua  zipsources.bat
docs/: architecture.md  building.md  configure.md  index.md  running.md  security.md  ssl.md
features/: qmgr.md  queue.md
files/: mqweb.db
samples/: .gitignore  authinfo_inq.php  authinfo_inq.pl  authrec_inq.php  authrec_inq.pl  channel_inq.php  chstatus_inq.php  conn_inq.php  guzzle.php  pygmentize_samples.sh  queue.php  queue.pl  rouge_samples.sh
samples/js/: queue_inq.js
samples/perl/: authinfo_inq.pl  authrec_inq.pl  authservice_inq.pl  channel_inq.pl  chinit_inq.pl  chstatus_inq.pl  clusqmgr_inq.pl  clusqmgr_resume.pl  clusqmgr_suspend.pl  conn_inq.pl  listener_inq.pl  lsstatus_inq.pl  namelist_inq.pl  process_inq.pl  qmgr_inq.pl  qmstatus_inq.pl  queue_inq.pl  service_inq.pl  sub_inq.pl  substatus_inq.pl  topic_inq.pl  tpstatus_inq.pl
samples/php/: authinfo_inq.php  authrec_inq.php  authservice_inq.php  channel_inq.php  channel_start.php  channel_stop.php  chstatus_inq.php  clusqmgr_inq.php  clusqmgr_resume.php  clusqmgr_suspend.php  conn_inq.php  listener_inq.php  lsstatus_inq.php  namelist_inq.php  process_inq.php  qmgr_inq.php  qmstatus_inq.php  queue_inq.php  service_inq.php  (+4 more)
style/: style.css  style.scss  syntax.css
templates/: base.tpl  channel.tpl  channelList.tpl  error.tpl  home.tpl  index.tpl  messageList.tpl  qmgr.tpl  queue.tpl  queueList.tpl  queues.tpl
test/: authinfo.py  authrec.py  channel.py  chstatus.py  clusqmgr.py  connection.py  listener.py  lsstatus.py  nl.py  process.py  qmgr.py  qmstatus.py  queue.py  service.py  test.cfg  testbase.py
(+295 files in other folders)
